--- a/Tensorflow Guide Chronological Order.ipynb
+++ b/Tensorflow Guide Chronological Order.ipynb
@@ -6687,6 +6687,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Beyond this check LeNet & Keras Repo "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
